// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TeamLayout should render TeamLayout component 1`] = `
<div
  className="position-relative"
>
  <img
    alt="Team Field Background"
    className="w-100 rounded"
    src="field.png"
  />
  <div
    className="position-absolute p-5 top-0 centered-flex flex-column h-100 overflow-hidden container"
  >
    <div
      className="my-1 row"
    >
      <div
        className="mx-auto col"
      >
        <div
          className="text-center"
          style={
            Object {
              "width": "77px",
            }
          }
        >
          <img
            className=""
            src="Barcelona.png"
            style={
              Object {
                "width": "55px",
              }
            }
            title="Barcelona"
          />
          <div
            className="text-truncate bg-default rounded p-1 w-100"
          >
            Ter Stegen
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TeamLayout should render TeamList component 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="w-50 col"
    >
      <h1
        className="centered-flex pt-4"
      >
         
        GK
         
      </h1>
      <div
        className="d-flex align-items-center ps-5"
      >
        <img
          className=""
          src="Barcelona.png"
          style={
            Object {
              "width": "60px",
            }
          }
          title="Barcelona"
        />
        <h4
          className="text-truncate ps-2 my-0"
        >
           
          Ter Stegen
           
        </h4>
      </div>
    </div>
  </div>
  <div
    className="row"
  />
</div>
`;

exports[`TeamLayout should render bigger row margin if field width is higher than 600px 1`] = `
<div
  className="position-relative"
>
  <img
    alt="Team Field Background"
    className="w-100 rounded"
    src="field.png"
  />
  <div
    className="position-absolute p-5 top-0 centered-flex flex-column h-100 overflow-hidden container"
  >
    <div
      className="my-3 row"
    >
      <div
        className="mx-auto col"
      >
        <div
          className="text-center"
          style={
            Object {
              "width": "84.14px",
            }
          }
        >
          <img
            className=""
            src="Barcelona.png"
            style={
              Object {
                "width": "60.1px",
              }
            }
            title="Barcelona"
          />
          <div
            className="text-truncate bg-default rounded p-1 w-100"
          >
            Ter Stegen
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
